Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-88761

Deleting QRhiRenderPassDescriptor that was used with QQuickRenderControl rendering crashes the renderer

XMLWordPrintable

    • bbb6298204b95f049c8a177365125247ba49dba3 (qt/qtdeclarative/dev) 54b4e08a2a9e0d82cb2107e3df0613a0da13a48a (qt/qtdeclarative/6.0)
    • Qt Quick 3D - 47/48

      Deleting QRhiRenderPassDescriptor that was used with QQuickRenderControl rendering crashes the renderer when it tries to ensure pipeline. This happens presumably because the pipeline cache key has QRhiRenderPassDescriptor pointer as part of the key.

       

      1   QSGBatchRenderer::operator==                                                                                                                         qsgbatchrenderer.cpp                 3931 0x7ffd72ad32d4 
      2   QHashPrivate::Data<QHashPrivate::Node<QSGBatchRenderer::GraphicsPipelineStateKey,QRhiGraphicsPipeline *>>::find                                      qhash.h                              563  0x7ffd72b18153 
      3   QHash<QSGBatchRenderer::GraphicsPipelineStateKey,QRhiGraphicsPipeline *>::find                                                                       qhash.h                              1085 0x7ffd72b1881c 
      4   QHash<QSGBatchRenderer::GraphicsPipelineStateKey,QRhiGraphicsPipeline *>::constFind                                                                  qhash.h                              1091 0x7ffd72b1291c 
      5   QSGBatchRenderer::Renderer::ensurePipelineState                                                                                                      qsgbatchrenderer.cpp                 2615 0x7ffd72added7 
      6   QSGBatchRenderer::Renderer::prepareRenderMergedBatch                                                                                                 qsgbatchrenderer.cpp                 3026 0x7ffd72ae0498 
      7   QSGBatchRenderer::Renderer::prepareRenderPass                                                                                                        qsgbatchrenderer.cpp                 3594 0x7ffd72ad84bf 
      8   QSGBatchRenderer::Renderer::render                                                                                                                   qsgbatchrenderer.cpp                 3382 0x7ffd72ad61d7 
      9   QSGRenderer::renderScene                                                                                                                             qsgrenderer.cpp                      176  0x7ffd72b3cbfc 
      10  QSGDefaultRenderContext::renderNextRhiFrame                                                                                                          qsgdefaultrendercontext.cpp          212  0x7ffd72b96313 
      11  QQuickWindowPrivate::renderSceneGraph                                                                                                                qquickwindow.cpp                     707  0x7ffd72a55c32 
      12  QQuickRenderControl::render                                                                                                                          qquickrendercontrol.cpp              435  0x7ffd72932e00 
      13  QmlDesigner::Qt5InformationNodeInstanceServer::grabRenderControl                                                                                     qt5informationnodeinstanceserver.cpp 343  0x7ff68f4d9736 
      14  QmlDesigner::Qt5InformationNodeInstanceServer::doRender3DEditView                                                                                    qt5informationnodeinstanceserver.cpp 747  0x7ff68f4d4230 
      15  QtPrivate::FunctorCall<QtPrivate::IndexesList<>,QtPrivate::List<>,void,void (__cdecl QmlDesigner::Qt5InformationNodeInstanceServer:: *)(void)>::call qobjectdefs_impl.h                   152  0x7ff68f4fa51c 
      16  QtPrivate::FunctionPointer<void (__cdecl QmlDesigner::Qt5InformationNodeInstanceServer:: *)(void)>::call<QtPrivate::List<>,void>                     qobjectdefs_impl.h                   186  0x7ff68f4e3917 
      17  QtPrivate::QSlotObject<void (__cdecl QmlDesigner::Qt5InformationNodeInstanceServer:: *)(void),QtPrivate::List<>,void>::impl                          qobjectdefs_impl.h                   396  0x7ff68f502261 
      18  QtPrivate::QSlotObjectBase::call                                                                                                                     qobjectdefs_impl.h                   375  0x7ffd6f595117 
      19  doActivate<0>                                                                                                                                        qobject.cpp                          3826 0x7ffd6fba1947 
      20  QMetaObject::activate                                                                                                                                qobject.cpp                          3887 0x7ffd6fb8adac 
      ... <More>                                                                                                                                                                                                        
       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            e0348803 Miikka Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes